--- a/neural_net_mnist_ニューラルネットワークの推論処理_p76.ipynb
+++ b/neural_net_mnist_ニューラルネットワークの推論処理_p76.ipynb
@@ -2,42 +2,82 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'common'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-08698eaa2c38>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmnist\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mload_mnist\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcommon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfunctions\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msigmoid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msoftmax\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'common'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# coding: utf-8\n",
     "import sys, os\n",
-    "sys.path.append(os.pardir)  # 親ディレクトリのファイルをインポートするための設定\n",
+    "sys.path.append(os.pardir)\n",
     "import numpy as np\n",
     "import pickle\n",
-    "from dataset.mnist import load_mnist\n",
-    "from common.functions import sigmoid, softmax\n",
-    "\n",
-    "\n",
+    "from dataset.mnist import load_mnist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#　はじめに３つの関数を定義する。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# データセットをゲットする。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_data():\n",
     "    (x_train, t_train), (x_test, t_test) = load_mnist(normalize=True, flatten=True, one_hot_label=False)\n",
-    "    return x_test, t_test\n",
-    "\n",
-    "\n",
+    "    return x_test, t_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 重みのパラメータをsample_weight.pkl（重みの学習済みデータ）から読み込む"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def init_network():\n",
     "    with open(\"sample_weight.pkl\", 'rb') as f:\n",
     "        network = pickle.load(f)\n",
-    "    return network\n",
-    "\n",
-    "\n",
+    "    return network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# シグモイド関数と出力層にsoftmaxを使った推論処理"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def predict(network, x):\n",
     "    W1, W2, W3 = network['W1'], network['W2'], network['W3']\n",
     "    b1, b2, b3 = network['b1'], network['b2'], network['b3']\n",
@@ -49,20 +89,90 @@
     "    a3 = np.dot(z2, W3) + b3\n",
     "    y = softmax(a3)\n",
     "\n",
-    "    return y\n",
-    "\n",
-    "\n",
-    "x, t = get_data()\n",
-    "network = init_network()\n",
-    "accuracy_cnt = 0\n",
-    "for i in range(len(x)):\n",
-    "    y = predict(network, x[i])\n",
-    "    p= np.argmax(y) # 最も確率の高い要素のインデックスを取得\n",
-    "    if p == t[i]:\n",
-    "        accuracy_cnt += 1\n",
-    "\n",
-    "print(\"Accuracy:\" + str(float(accuracy_cnt) / len(x)))"
+    "    return y"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def softmax(a):\n",
+    "    c = np.max(a)\n",
+    "    exp_a = np.exp(a-c)\n",
+    "    sum_exp_a = np.sum(exp_a)\n",
+    "    y = exp_a / sum_exp_a\n",
+    "    \n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, t = get_data() # get_data() でMNISTデータセットを取得\n",
+    "network = init_network() # sample_weight.pkl を読み込んで、networkに代入"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_cnt = 0 # accuracy_cntを初期化する。数字があっていたら、+1にする。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(x)): # テスト画像のすべてのデータを１枚１枚取り出して処理する。\n",
+    "    y = predict(network, x[i]) # 1枚の画像データに対して「predict(network, x[i])」を\\n\n",
+    "      #実行し、数字 0 ～ 9 それぞれの確立を出力\n",
+    "    p= np.argmax(y) # 最も確率の高い要素のインデックスを取得\n",
+    "    if p == t[i]: # 正解のラベル名と、pがあっているかを確認する。\n",
+    "        accuracy_cnt += 1 #一致していれば、認識制度を加算"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:0.9352\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy:\" + str(float(accuracy_cnt) / len(x))) #正解率を出力"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
