--- a/cross_entropy_error_交差エントロピー誤差_バッチ対応版.ipynb
+++ b/cross_entropy_error_交差エントロピー誤差_バッチ対応版.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "def cross_entropy_error(y, t):\n",
     "    if y.ndim ==1:\n",
     "        t = t.reshape(1, t.size)\n",
@@ -17,14 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +39,349 @@
     "    batch_size = y.shape[0]\n",
     "    return - np.sum(np.log(y [np.arange(batch_size), t] + 1e-7)) / batch_size "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MNISTの準備"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.append(os.pardir) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataset.mnist import load_mnist "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(x_train, t_train), (x_test, t_test) =  load_mnist(normalize=True, one_hot_label=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60000, 784)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60000, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(t_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#交差エントロピー誤差のミニバッチ学習 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "sys.path.append(os.pardir)\n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "from dataset.mnist import load_mnist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from common.funtions import sigmoid, softmax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid(a):\n",
+    "    return 1 / (1 + np.exp(-a)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def softmax(a):\n",
+    "    c = np.max(a)\n",
+    "    exp_a = np.exp(a - c) # オーバーフロー対策  exp:指数関数\n",
+    "    sum_exp_a = np.sum(exp_a)\n",
+    "    y = exp_a / sum_exp_a\n",
+    "    \n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def init_network():\n",
+    "    with open(\"sample_weight.pkl\", 'rb') as f:\n",
+    "        network = pickle.load(f)\n",
+    "    return network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(network, x):\n",
+    "    W1, W2, W3 = network['W1'], network['W2'], network['W3']\n",
+    "    b1, b2, b3 = network['b1'], network['b2'], network['b3']\n",
+    "\n",
+    "    a1 = np.dot(x, W1) + b1\n",
+    "    z1 = sigmoid(a1)\n",
+    "    a2 = np.dot(z1, W2) + b2\n",
+    "    z2 = sigmoid(a2)\n",
+    "    a3 = np.dot(z2, W3) + b3\n",
+    "    y = softmax(a3)\n",
+    "\n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cross_entropy_error(y, t):\n",
+    "    if y.ndim ==1:\n",
+    "        t = t.reshape(1, t.size)\n",
+    "        y = y.reshape(1, y.size)\n",
+    "    \n",
+    "    batch_size = y.shape[0]\n",
+    "    return - np.sum(t* np.log(y + 1e-7)) / batch_size  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(x_train, t_train), (x_test, t_test) =  load_mnist(normalize=True, one_hot_label=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_size = x_train.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_mask = np.random.choice(train_size,  batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_batch = x_train[batch_mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_batch = t_train[batch_mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[34442 31892  1670 26996 10425 25182  7231 11338 20400 23624 47212 35335\n",
+      " 55622  1801 44295 33905 52681  1311 20397 29267 50442 48811 46319 56117\n",
+      "  5873 32714 40997  7310  9606 59552 50114 45264 49792  9598  7628  4808\n",
+      "  8693 38965 45559  3565 19014 50214 50884 30790 47293 59099 48360 38951\n",
+      " 48040 20944 57103 55007 16055 45758 24079 23374 23929 36118 51945 59036\n",
+      " 51543  8228  1178 24065 20315 35800 29366 24095 17777  3513 11061 51675\n",
+      "  8369 59306 35330 12854  6574 30413 43408  8994 35065 34529 43907 39781\n",
+      " 17569 56634 10238 38128 16900 37835 47462 22547 54840  3174 49290 51848\n",
+      " 46214 43835  6712 41499]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(batch_mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "network = init_network()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_batch = predict(network, x_batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.921515681743622"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_entropy_error(y_batch, t_batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
