--- a/gradient_descent_method_勾配降下法_p107.ipynb
+++ b/gradient_descent_method_勾配降下法_p107.ipynb
@@ -2,26 +2,170 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradient_descent(f, init_x, lr = 0.01, step_num = 100): # init_x:初期値　　lr:学習率\n",
-    "    x = init_x\n",
-    "    \n",
-    "    for i in range(step_sum):　#step_sum:勾配法による繰り返しの数\n",
-    "        grad = numerical_gradient(f, x)\n",
-    "        x -= lr * grad\n",
-    "    return x"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 引数fは最適化したい関数、init_xは初期値、step_numは勾配法の繰り返し回数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gradient_descent(f, init_x, lr=0.01, step_num=100):\n",
+    "...     x = init_x\n",
+    "...\n",
+    "...     for i in range(step_num): # 0~100までループ\n",
+    "...         grad = numerical_gradient(f, x)    # 関数の勾配を求める\n",
+    "...         x -= lr * grad    # 勾配法の数式に当てはめる(xを勾配の方向へ移動)\n",
+    "...\n",
+    "...     return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 関数の勾配をnumerical_gradient(f, x)　で求めて、その勾配に学習率を掛けた値で更新する処理を　step_num 　で指定された回数繰り返す"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def function_2(x):\n",
+    "    return x[0] ** 2 + x[1] ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_x = np.array([-3.0, 4.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def numerical_gradient(f, x):\n",
+    "\n",
+    "    h = 1e-4 # 0.0001\n",
+    "    grad = np.zeros_like(x) # xと同じ形状の配列を生成\n",
+    "\n",
+    "    for idx in range(x.size):\n",
+    "        tmp_val = x[idx]\n",
+    "\n",
+    "        # f(x + h)の計算\n",
+    "        x[idx] = tmp_val + h\n",
+    "        fx_h1 = f(x)\n",
+    "\n",
+    "        # f(x - h)の計算\n",
+    "        x[idx] = tmp_val - h\n",
+    "        fx_h2 = f(x)\n",
+    "\n",
+    "        grad[idx] = (fx_h1 - fx_h2) / (h * 2)\n",
+    "        x[idx] = tmp_val # 値をもとに戻す\n",
+    "\n",
+    "    return grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-6.11110793e-10,  8.14814391e-10])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gradient_descent(function_2, init_x = init_x, lr = 0.1, step_num = 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_x = np.array([-3.0, 4.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-2.58983747e+13, -1.29524862e+12])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gradient_descent(function_2, init_x = init_x, lr = 10.0, step_num = 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_x = np.array([-3.0, 4.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-2.63011810e+12,  3.08739746e+12])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gradient_descent(function_2, init_x = init_x, lr = -10., step_num = 100)"
    ]
   },
   {
